Fix all open SonarQube issues (S6881 virtual threads, S7467 unnamed pattern, S6201 pattern matching instanceof, and S1192 duplicate literals)